src/main/java/com/test/webtest/global/error/GlobalExceptionHandler.java
package com.test.webtest.global.error;

public class GlobalExceptionHandler {
}
